--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="col">
             <div class="row_1">
-                <div class="row">1Lorem ipsum </div>
+                <div class="row">1Ldddddrem ipsum </div>
                 <div class="row">2amet </div>
                 <div class="row">3 Moles</div>
                 <div class="row">4autem</div>
